<resources>
    <string name="app_name">Lirax</string>


    <string name="first_name">First Name</string>

    <string name="last_name">Last Name</string>

    <string name="password">Password</string>

    <string name="email">Email</string>
   <string name="auth_text">Authentication Code</string>
    <string name="accept">I accept the</string>
    <string name="and">and</string>
    <string name="terms"><u>Terms &amp; Conditions</u></string>
    <string name="signu_text">Sign Up</string>
    <string name="Privcy"><u>Privacy &amp; Policy</u></string>
    <string name="cooking"><u>Cooking &amp; Tracking Technologies</u></string>
    <string name="canel">Cancel</string>
    <string name="forgot">Forgot</string>
    <string name="password_frogot">password?</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="username">Username</string>
    <string name="login">Log In</string>
    <string name="or_text">OR</string>
    <string name="dont_account_text">Don`t hava an Account? </string>
    <string name="problem">Any Problem,Please</string>
    <string name="contact_text">Contact Us</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="private_usert">Private User</string>
    <string name="comapny_text">Company/Association</string>
    <string name="insitution">Institutions</string>
    <string name="submit_text">Submit</string>
    <string name="registered_email">Registered Email</string>
    <string name="already_text">Already have an account?</string>
    <string name="login_now"><u>Login Now</u></string>
    <string name="reset_text">Reset Password</string>
    <string name="authetication_text">Authetication Code</string>
    <string name="authetication_hint">Enter Your Code</string>
    <string name="company_name_text">Company Name</string>
    <string name="comapny_name_hint">Enter Company Name</string>
    <string name="insitution_name_text">Institution Name</string>
    <string name="insitution_name_hint">Enter Institution Name</string>


</resources>